--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ hs_err_pid*
 .settings/org.eclipse.jdt.apt.core.prefs
 .settings/org.eclipse.jdt.core.prefs
 .settings/org.eclipse.m2e.core.prefs
+/bin/
